--- a/css/main.css
+++ b/css/main.css
@@ -397,8 +397,8 @@ a {
   background-size: cover;
 }
 
-.moneydiary {
-  background-image: url("../images/moneydiary.png");
+.registnaver {
+  background-image: url("../images/naverUI.PNG");
   background-position: center;
   background-size: cover;
 }
